#   Issue:  <optional, for number from github>
#   Thanks: <optional, who reported etc>
#   [DESCRIPTION]
#   ... All the text up to the next [ENTRY] or [RELEASE] is included
#   as description
#   [MORE]
#    ... If a more section is included, then it will be displayed as an
#    optional section in the html page.
#

[RELEASE]
Version: 6.3.0
Date: 2020-??-??
[DESCRIPTION]
Let's see.

[ENTRY]
Module: gist
What:   change
Rank:   minor
Thanks: Jip J. Dekker
[DESCRIPTION]
Add support for building Gecode Gist with Qt6.

[ENTRY]
Module: flatzinc 
What:   new
Rank:   minor
Thanks: Jip J. Dekker
[DESCRIPTION]
Add support for disjunctive and cumulative on optional variables.

[ENTRY]
Module: flatzinc 
What:   new
Rank:   minor
Thanks: Jip J. Dekker
[DESCRIPTION]
Generate MiniZinc solver configuration for the Gecode FlatZinc using Gist.

[ENTRY]
Module: search
What:   new
Rank:   minor
Thanks: Jip J. Dekker
[DESCRIPTION]
Add RestartStop class to enforce a limit on the amount of restarts conducted
in a search. RestartStop is included in CombinedStop and accessible from the
FlatZinc interface through the --restart-limit flag.

[ENTRY]
Module: int
What:   bug
Rank:   minor
Issue:  128
Thanks: Mattias Grönkvist
[DESCRIPTION]
Distinct propagation (as used by distinct, channel, and circuit) would
sometimes read from uninitialized memory.

Module: flatzinc
What:   bug
Rank:   minor
Thanks: Luis Quesada
[DESCRIPTION]
The gecode.mzn file now contains search annotation definitions for action
branching renamed from the previous erroneous and not working activity.

[ENTRY]
Module: other
What:   change
Rank:   major
[DESCRIPTION]
Gecode now requires C++ 11, the support for compiling without C++ 11
has been removed.

[ENTRY]
Module: kernel
What:   change
Rank:   minor
[DESCRIPTION]
Make the region pool thread local.
[MORE]
When running tests in parallel, having a shared pool for regions took too much
time on macOS. This change makes the pool into a thread_local instead.

[ENTRY]